<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/highBtn"
        android:layout_width="0dp"
        android:layout_height="100sp"
        android:text="HIGH"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833"
        tools:text="@string/high_text" />

    <Button
        android:id="@+id/lowBtn"
        android:layout_width="0dp"
        android:layout_height="100sp"
        android:layout_marginTop="4dp"
        android:text="LOW"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highBtn"
        tools:text="@string/low_text" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="465dp"
        android:layout_height="707dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="224dp"
        android:layout_height="57dp"
        android:layout_marginBottom="30dp"
        android:text="次のカード"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        tools:text="@string/next_text" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="148dp"
        android:layout_height="56dp"
        android:text="@string/btn_try_again"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/reset" />

    <TextView
        android:id="@+id/hitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="win"
        android:textColor="@color/design_default_color_error"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/hit_text" />

    <TextView
        android:id="@+id/loseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="16dp"
        android:text="lose"
        android:textColor="@color/design_default_color_primary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/lose_text" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?android:attr/detailsElementBackground"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/yourCardImage"
        android:layout_width="160dp"
        android:layout_height="250dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="160dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/set" />

    <ImageView
        android:id="@+id/droidCardImage"
        android:layout_width="160dp"
        android:layout_height="250dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/set" />

    <TextView
        android:id="@+id/player"
        android:layout_width="93dp"
        android:layout_height="33dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/player"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/yourCardImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hitText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/cpu"
        android:layout_width="93dp"
        android:layout_height="33dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="68dp"
        android:text="@string/cpu"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/droidCardImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loseText"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>