<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/topModeAIWeakButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topModeManualButton"
        android:layout_marginTop="4dp"
        android:text="@string/textTopModeAIWeakButton"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topModeManualButton" />

    <Button
        android:id="@+id/topModeAIStrongButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topModeAIWeakButton"
        android:text="@string/textTopModeAIStrongButton"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topModeAIWeakButton"
        app:layout_constraintVertical_bias="0.018" />

    <Button
        android:id="@+id/topModeManualButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/textTopModeManualButton"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>