<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout tools:ignore="UsingOnClickInXml" android:gravity="center" android:orientation="vertical" tools:context=".MainActivity" android:layout_height="wrap_content" android:layout_width="fill_parent" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="22sp" android:text="@string/count_label" android:id="@+id/countLabel"/>

    <TextView android:gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="24sp" android:text="@string/question_label" android:id="@+id/questionLabel" android:layout_marginTop="60dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="80sp" android:text="00:00" android:id="@+id/timeTextView" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>

    <Button android:layout_height="60dp" android:layout_width="300dp" android:text="@string/btn_answer" android:id="@+id/answerBtn1" android:layout_marginTop="80dp" android:onClick="checkAnswer" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <Button android:layout_height="60dp" android:layout_width="300dp" android:text="@string/btn_answer" android:id="@+id/answerBtn2" android:layout_marginTop="6dp" android:onClick="checkAnswer" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <Button android:layout_height="60dp" android:layout_width="300dp" android:text="@string/btn_answer" android:id="@+id/answerBtn3" android:layout_marginTop="6dp" android:onClick="checkAnswer" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <Button android:layout_height="60dp" android:layout_width="300dp" android:text="@string/btn_answer" android:id="@+id/answerBtn4" android:layout_marginTop="6dp" android:onClick="checkAnswer" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</LinearLayout>